[gd_scene load_steps=8 format=3 uid="uid://k65lxxbh3a0c"]

[ext_resource type="Script" uid="uid://bwwmwid74o7i3" path="res://Stages/EditRoom/edit_room.gd" id="1_malew"]
[ext_resource type="Texture2D" uid="uid://c6ctvxbf3vxag" path="res://Stages/EditRoom/EditRoom.png" id="2_6ff0t"]
[ext_resource type="PackedScene" uid="uid://5qmhw8feh0bi" path="res://Characters/PersonTD/PersonTD.tscn" id="3_lr8l6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lr8l6"]
size = Vector2(305.71436, 134.2857)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_asre0"]
size = Vector2(79.28574, 60.892853)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lr3mf"]
size = Vector2(139.99998, 87.14285)

[sub_resource type="CircleShape2D" id="CircleShape2D_lr8l6"]
radius = 50.081562

[node name="EditRoomScene" type="Node2D"]
script = ExtResource("1_malew")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="EditRoom" type="Node2D" parent="."]
scale = Vector2(0.7, 0.7)

[node name="Sprite2D" type="Sprite2D" parent="EditRoom"]
texture = ExtResource("2_6ff0t")

[node name="StaticBody2D" type="StaticBody2D" parent="EditRoom"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EditRoom/StaticBody2D"]
position = Vector2(-164.28572, 302.85718)
scale = Vector2(0.9999998, 0.9999998)
shape = SubResource("RectangleShape2D_lr8l6")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="EditRoom/StaticBody2D"]
position = Vector2(180.00002, 245.7143)
scale = Vector2(0.9999998, 0.9999998)
shape = SubResource("RectangleShape2D_lr8l6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="EditRoom/StaticBody2D"]
position = Vector2(-249.99992, -254.28568)
scale = Vector2(0.9999995, 0.9999995)
shape = SubResource("RectangleShape2D_lr8l6")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="EditRoom/StaticBody2D"]
position = Vector2(231.42857, -257.14285)
scale = Vector2(0.9999995, 0.9999995)
shape = SubResource("RectangleShape2D_lr8l6")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="EditRoom/StaticBody2D"]
position = Vector2(-400.00003, 2.8571434)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_asre0")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="EditRoom/StaticBody2D"]
position = Vector2(-378.57138, 150.00002)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("RectangleShape2D_asre0")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="EditRoom/StaticBody2D"]
position = Vector2(-371.42847, -141.87497)
scale = Vector2(0.99999964, 0.99999964)
shape = SubResource("RectangleShape2D_asre0")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="EditRoom/StaticBody2D"]
position = Vector2(462.85712, -112.85715)
scale = Vector2(0.99999964, 0.99999964)
shape = SubResource("RectangleShape2D_asre0")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="EditRoom/StaticBody2D"]
position = Vector2(-10, -277.14288)
scale = Vector2(0.99999964, 0.99999964)
shape = SubResource("RectangleShape2D_asre0")

[node name="DoorRight" type="Area2D" parent="EditRoom"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EditRoom/DoorRight"]
position = Vector2(479.99997, 15.714285)
scale = Vector2(0.99999994, 0.99999994)
shape = SubResource("RectangleShape2D_lr3mf")
debug_color = Color(0.82367057, 0.31772324, 0.6262148, 0.41960785)

[node name="VideoDeskTop" type="Area2D" parent="EditRoom"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EditRoom/VideoDeskTop"]
position = Vector2(-11.428572, -204.28572)
shape = SubResource("CircleShape2D_lr8l6")
debug_color = Color(0.8528828, 0.2830491, 0.6117608, 0.41960785)

[node name="PersonTDScene" parent="." instance=ExtResource("3_lr8l6")]
position = Vector2(214, 0)
scale = Vector2(1.5, 1.5)
